--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="superior"></div>
       <div class="mensaje">
 <p> Te amo mucho mami💖</p>
+<p>Eres la mejor madre que nos pudo haber tocado en este mundo. Gracias por siempre poder, y gracias por siempre estar. 💖.</p>
       </div>
       <div class="carta">
         <i class="bx bxs-heart"></i>
